[gd_scene load_steps=2 format=2]

[ext_resource path="res://PlayerStatsUI.gd" type="Script" id=1]

[node name="PlayerStatsUI" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
custom_constants/separation = 2
script = ExtResource( 1 )

[node name="ManaLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 6.0
text = "Mana: 3"

[node name="HealthLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 8.0
margin_right = 40.0
margin_bottom = 14.0
text = "HP: 25"

[node name="BlockLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 16.0
margin_right = 40.0
margin_bottom = 22.0
text = "Block: 5"
